# RegIntel

./: .dockerignore  .env.aws.example  .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.aws.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  eval.yml  staging-burn-in.yml  terraform-plan.yml
docs/: AGENTS.md  API_SPEC.md  ARCHITECTURE.md  AWS_BEGINNER_DEPLOY.md  BURN_IN.md  CLAUDE.md  DATABASE_SCHEMA.md  DATA_PIPELINE.md  DEPLOYMENT.md  DESIGN_PARTNER.md  EVALUATION.md  ORACLE_CLOUD_DEPLOY.md  PRD.md  README.md  RESUME_IMPACT.md  ROADMAP.md  SECURITY.md  SECURITY_CHECKLIST.md  TASKS.md  TECH_STACK.md
infra/lambda/: ingestion_handler.py
infra/langfuse/: docker-compose.langfuse.yml
infra/runbooks/: incident_response.md  secret_rotation.md
infra/terraform/: README.md
scripts/: aws_ec2_bootstrap.sh  compare_rerankers.py  embed_sources.py  enqueue_change_event.py  expand_pipeline_eval.py  export_feedback_labels.py  ingest_sources.py  load_test.py  partner_profile.example.json  run_graph_migrations.py  seed_demo.py  seed_demo_vertical.py  seed_graph.py  seed_partner.py  setup_local.ps1  train_relevance_model.py  wait_for_services.py  weekly_fp_report.py
services/: __init__.py
services/agents/: Dockerfile  __init__.py  brief_generation.py  change_detector.py  config.py  impact_analysis.py  llm_client.py  pipeline.py  relevance.py  relevance_model.py  relevance_weights.py  schemas.py  verification.py  worker.py
services/api/: Dockerfile  __init__.py  alembic.ini  config.py  db.py  deps.py  exceptions.py  handlers.py  main.py
services/eval/: __init__.py  citation_presence_v0.py
services/graph/: __init__.py  builder.py  cross_references.py  seed.py  sync_profiles.py
services/ingestion/: Dockerfile  __init__.py  diff_engine.py  document_store.py  models.py  pipeline.py  reference_corpus.py  severity.py
services/retrieval/: __init__.py  embeddings.py  graph_expand.py  rerank.py  rerank_service.py  search.py  (+1 more)
tests/: __init__.py  conftest.py
web/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
(+185 files in other folders)
