[project]
name = "regintel"
version = "0.1.0"
description = "GraphRAG regulatory change-intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.26.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.5.0",
    "langgraph>=0.2.0",
    "boto3>=1.35.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.5.0", "numpy>=2.1.0", "sentence-transformers>=3.0.0"]
observability = ["langfuse>=2.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"services/api/migrations/**" = ["E501", "UP007"]
"services/api/routers/**" = ["B008"]
"services/api/deps.py" = ["B008"]
"scripts/expand_pipeline_eval.py" = ["E501"]
"services/api/exceptions.py" = ["E501"]
"tests/unit/ingestion/test_cfr_parser.py" = ["E501"]  # inline HTML fixtures

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["services"]
plugins = ["pydantic.mypy"]
exclude = ["services/api/migrations/"]

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "neo4j.*", "fastembed.*", "langgraph.*", "lightgbm.*", "boto3.*", "botocore.*", "jwt.*", "langfuse.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
